--- a/index.html
+++ b/index.html
@@ -26,10 +26,10 @@
 	<div>
 		<h5>GALERÍA</h5> <br>
 		<figure>
-			<li><img src="imagenes/Celvin.jpg" width="390" height="300"></li>
+			<li><img src="imagenes/celvin.jpg" width="390" height="300"></li>
 		</img></figure>
 		<figure>
-			<li><img src="imagenes/Kevin.jpg" width="390" height="300"></li>
+			<li><img src="imagenes/kevin.jpg" width="390" height="300"></li>
 		</figure>
 		<figure>
 			<li><img src="imagenes/elton.png" width="320" height="305"></li>
