--- a/compañeros/compañeros.html
+++ b/compañeros/compañeros.html
@@ -12,7 +12,7 @@
 	<p> Nací el 22 de octubre del año 2005, en Santa Rosita Guajiquiro La Paz, inicié mis estudios en el año 2012 en el Kinder Federico Padilla Rubí en el año 2013 seguí mis estudios entrando a mi primer grado en el Centro de Educación Básica Ramón Rosa en el año 2018 egresé de sexto grado con el maestro Oscar Rolando Andres, luego en el año 2019 a séptimo grado ,en 2020 octavo grado, 2021 noveno grado, luego en el año 2022 ingresé al Centro de Educación Media Ramón Rosa, en el año 2023 seguí en el segundo año de Bachillerato Técnico Profesional en Informática, actualmete estoy en el tercer año del Bachillerato en Informática y gracias a Dios todos los años he obtenido excelentes notas con Excelencia Académica y mis aspiraciones es graduarme de Licenciado en la Universidad Nacional Autónoma de Honduras (UNAH).</p>
 	<br>
 	<figure class="img">
-	<img src="C:\Users\50432\Desktop\personal\imagenes/celvin1.jpg" height="360" width="460">
+	<img src="C:\imagenes/celvin1.jpg" height="360" width="460">
 	</figure>
 	<hr>
 
@@ -21,7 +21,7 @@
     <p> Nací el 12 de diciembre del año 2007, en Santa Rosita Guajiquiro La Paz, inicié mis estudios en el año 2012 en el Kinder Federico Padilla Rubí en el año 2013 seguí mis estudios entrando a mi primer grado en el Centro de Educación Básica Ramón Rosa en el año 2018 egresé de sexto grado con el maestro Oscar Rolando Andres, luego en el año 2019 a séptimo grado ,en 2020 octavo grado, 2021 noveno grado, luego en el año 2022 ingresé al Centro de Educación Media Ramón Rosa, en el año 2023 seguí en el segundo año de Bachillerato Técnico Profesional en Informática, actualmete estoy en el tercer año del Bachillerato en Informática y mis aspiraciones son estudiar en el curso de la ANAPO en el departamento de La Paz. </p>
     <br>
     <figure>
-    <img src="C:\Users\50432\Desktop\personal\imagenes/kevin.jpg" height="300" width="450"> </img>
+    <img src="C:\imagenes/kevin.jpg" height="300" width="450"> </img>
     </figure>
     <hr>
     
@@ -32,7 +32,7 @@
    en el 2022 con 16 años de edad entre a Bachillerato Técnico Profesional en Computación y durante este tiempo e aprendido mucho y aqui estoy y mi meta es graduarme con toda la plebada.
 </p>
 <figure>
-<img src="C:\Users\50432\Desktop\personal\imagenes/elton.png" height="400" width="350">
+<img src="C:\imagenes/elton.png" height="400" width="350">
 </figure> <br> <hr>
 
 <h1>Biografía de JERSON ARIEL MENDOZA MENDOZA</h1><br>
@@ -43,7 +43,7 @@ En el año 2011 empeze mis estudios en el kinder,en la escuela Alba Luz Ramirez 
      
 </br>
 <figure>
-<img src="C:\Users\50432\Desktop\personal\imagenes/jerson.png" height="400" width="350"> </img>
+<img src="\imagenes/jerson.png" height="400" width="350"> </img>
 </figure>
     <hr>
     </div>
