--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 		<h5>GALERÍA</h5> <br>
 		<figure>
 			<li><img src="imagenes/celvin.jpg" width="390" height="300"></li>
-		</img></figure>
+	        </figure>
 		<figure>
 			<li><img src="imagenes/kevin.jpg" width="390" height="300"></li>
 		</figure>
