--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 	<div>
 		<h5>GALERÍA</h5> <br>
 		<figure>
-			<li><img src="imagenes/celvin.jpg" width="390" height="300"></li>
+			<li><img src="imagenes/celvin1.jpg" width="390" height="300"></li>
 	        </figure>
 		<figure>
 			<li><img src="imagenes/kevin.jpg" width="390" height="300"></li>
